--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -264,13 +264,87 @@
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>專案成果摘要</p>
+<p><span>手足球早在20世紀存在，由一位英國倫敦的哈羅德所發明，規則源自於足球，是一種可以類似火柴盒的桌上型運動。首先透過老師給予的Vrep版本進行修改，因為我們對程式碼一竅不通，透過現成版本了解到要加入哪些程式碼，更進一步加深Vrep程式及程式設計的能力。而在繪圖部分，利用Onshape並熟悉操作各功能，繪製出樣品在透過協同功能最終完成成品。而本專案目的是加強各位協同能力和除錯能力，每個人在完成式只要透過Github上傳到倉儲就可進行協同，在每週完成個人任務都可以實時更新並推送。</span></p>
 <p>專案執行動機</p>
+<p><strong></strong>手足球是一個適合在家中遊玩的大型遊戲器材，通常由兩人面對面互相操控人偶上的桿子。一開始對足球非常排斥，因為它相當消耗體力，但接觸手足球後發先它能滿足一些體力不足卻想體驗踢足球的人。剛開始接觸手足球時，由於不一定會有人有空陪你玩 ，因此嘗試設計人機對打並透過這樣的方式了解手足球如何在vrep以機器人的形式設計出來。</p>
 <p>相關文獻探討</p>
+<p><a href="https://zh.wikipedia.org/wiki/%E6%A1%8C%E4%B8%8A%E8%B6%B3%E7%90%83">維基百科-足球機</a><br/><a href="http://www.foosball.tw/menu_content/about_foos/About-Foos-History.html">台灣手足球協會</a><br/><a href="https://patentimages.storage.googleapis.com/dd/fd/fd/58d26ff6b4a35a/US20120205865A1.pdf">PDF</a></p>
 <p>專案執行成員</p>
+<table border="3" style="width: 531px;"><caption></caption>
+<tbody>
+<tr>
+<td style="width: 137px;"><strong>Leader</strong></td>
+<td style="width: 392px;"><strong>Assignments</strong></td>
+</tr>
+<tr>
+<td style="width: 137px;">鐘偉哲<span> </span><a href="https://40623224.github.io/40623224-Personal-Website/content/Introduction.html">40623224</a></td>
+<td style="width: 392px;">設計與繪圖、送球機構設計與模擬、專案報告書、監督組員進度</td>
+</tr>
+</tbody>
+</table>
+<table border="3">
+<tbody>
+<tr>
+<td><strong>Member</strong></td>
+<td><strong>Assignments</strong></td>
+</tr>
+<tr>
+<td>翁嘉宏<span> </span><a href="https://mdecadp2018.github.io/site-40623210/content/index.html">40623210</a></td>
+<td>專案口頭簡報Reveal、V-rep 動態模擬</td>
+</tr>
+<tr>
+<td>卓昆鋒<span> </span><a href="https://mdecadp2018.github.io/site-40623225/content/index.html">40623225</a></td>
+<td>V-rep 動態模擬</td>
+</tr>
+<tr>
+<td>鄭清銓<span> </span><a href="https://github.com/mdecadp2018/site-40623226">40623226</a></td>
+<td>執行規劃、V-rep 動態模擬</td>
+</tr>
+<tr>
+<td>張耀元<a href="https://mdecadp2018.github.io/site-40623227/content/index.html"> 40623227</a></td>
+<td>V-rep 動態模擬 &lt;1&gt;人人對打 &lt;2&gt;機機對打 &lt;3&gt;人機對打</td>
+</tr>
+<tr>
+<td>洪一木 40623234</td>
+<td>執行規劃</td>
+</tr>
+<tr>
+<td>許筌翔<span> </span><a href="https://mdecadp2018.github.io/site-40623238/content/index.html">40623238</a></td>
+<td>設計與繪圖</td>
+</tr>
+<tr>
+<td>許登貴<a href="https://mdecadp2018.github.io/site-40623239/content/index.html"> 40623239</a></td>
+<td>V-rep 動態模擬</td>
+</tr>
+<tr>
+<td>莊子慶<span> </span><a href="https://40423158.github.io/2019cd/content/index.html">40423158</a></td>
+<td>專案口頭簡報Reveal、V-rep 動態模擬</td>
+</tr>
+<tr>
+<td>郭金豪 40423232</td>
+<td>專案報告書(Pandoc、TinyTeX)</td>
+</tr>
+<tr>
+<td>陳憲棠 40423237</td>
+<td>專案報告書(Pandoc、TinyTeX)</td>
+</tr>
+</tbody>
+</table>
 <p>執行使用套件</p>
+<p>Onshape、Vrep、Github、CMSimfly</p>
 <p>專案執行過程規劃</p>
+<p>每個人分配各自工作，透過協同方式每個人依照每周進度提交並以Github媒介作協同</p>
 <p>專案執行內容</p>
+<p><span>透過Onshape繪製出手足球本體及人偶尺寸，利用Vrep編寫程式碼操控人偶，透過每週上傳Github進行進度協同，最後以CMSimfly網站上呈現出來</span></p>
 <p>專案結論</p>
+<p>下載連結: <a href="https://drive.google.com/file/d/1_Hk3IbIg1_vGYoDoedjd3eVrQ4iWQK_m/view">人機對人機</a> 、 <a href="https://drive.google.com/file/d/1eaj6ecl3lIpankWGjdBZQgur_Uf5SOrK/view">人對人機</a> 、<a href="https://drive.google.com/file/d/10O3gXgdBlt4v4Mzeh6rxT1oc7lA7H9fS/view">人對人</a></p>
+<p>由於目前對於設計方面還不熟悉，因此設計過程大部分都是參考網站上再改變尺寸和程式碼，基礎部分還需多多加強，在對打時，球的路徑並不是很順暢，還有擊球時距離遠近也無法控制，這部分還需要學習並了解。</p>
+<p>人機對人機</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="280" src="https://www.youtube.com/embed/J5nIZNrk1mI" width="500"></iframe></p>
+<p>人對人機</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="314" src="https://www.youtube.com/embed/3dqeYTxdUQw" width="500"></iframe></p>
+<p>人對人</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="341" src="https://www.youtube.com/embed/ltAH5UlB6ds" width="500"></iframe></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>專案成果摘要</p>
@@ -528,16 +602,16 @@
 <p>#連結在工程圖下方，請自行點取</p>
 <p><img alt="" height="497" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0.png" width="700"/></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/d22ccaab6809ca4ed2ed0018">手足球台工程圖</a>Final version - 40623224)</span></p>
-<hr/>
+<hr>
 <p><span><img alt="" height="493" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E5%93%A1.png" width="700"/></span></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/796a476ba71a369b3bf0ad6d">手足球員</a>工程圖Final version- 40623224)</span></p>
-<hr/>
+<hr>
 <p><span><img alt="" height="497" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E6%A1%BFA.B.png" width="700"/></span></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/a6ffaa7772db3dd7627af7b7">手足球台握把A、B</a>工程圖Final version - 40623224)</span></p>
-<hr/>
+<hr>
 <p><span><img alt="" height="490" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E6%A1%BFC.D.png" width="700"/></span></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/0c2dbedc0d89aae2590d0725">手足球台握把C、D</a>工程圖Final version</span><span> - 40623224)</span></p>
-<hr/>
+<hr>
 <p><span><img alt="" height="461" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E5%A5%97%E7%92%B0.png" width="700"/></span></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/79050e73f6fdafdf75603c1c">手足球握把擋塊</a>工程圖 Final version<span> - 40623224)</span></span></p>
 <hr/>
@@ -1030,6 +1104,7 @@ end
 <p><a href="https://youtu.be/58hZPcfdCI8">40623227 張耀元結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=IwRi95KKyrg">40623238 許筌翔結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=jUDcZmLp38A&amp;feature=youtu.bea">40623210 翁嘉宏結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=aYgmS1R16Xk&amp;feature=youtu.be">40623226 鄭清銓結案口頭簡報</a></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
@@ -1056,4 +1131,4 @@ end
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
 <p><span></span></p>
-<p><span></span></p>
+<p><span></span></p></hr></hr></hr></hr>
