--- a/content/手足球系統模擬.html
+++ b/content/手足球系統模擬.html
@@ -399,7 +399,7 @@ img {
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>專案成果摘要</p>
-<p>手足球早在20世紀存在，由一位英國倫敦的哈羅德所發明，規則源自於足球，是一種可以類似火柴盒的桌上型運動。我們利用Vrep建立手足球系統，當射門得分時，會由底部的抬球機構把球送回場中央，而人偶透過程式控制方式可以約束移動或成為人機對打電腦方自動控制，最後在設定球的碰撞係數。</p>
+<p><span>手足球早在20世紀存在，由一位英國倫敦的哈羅德所發明，規則源自於足球，是一種可以類似火柴盒的桌上型運動。首先透過老師給予的Vrep版本進行修改，因為我們對程式碼一竅不通，透過現成版本了解到要加入哪些程式碼，更進一步加深Vrep程式及程式設計的能力。而在繪圖部分，利用Onshape並熟悉操作各功能，繪製出樣品在透過協同功能最終完成成品。而本專案目的是加強各位協同能力和除錯能力，每個人在完成式只要透過Github上傳到倉儲就可進行協同，在每週完成個人任務都可以實時更新並推送。</span></p>
 <p>專案執行動機</p>
 <p><strong></strong>手足球是一個適合在家中遊玩的大型遊戲器材，通常由兩人面對面互相操控人偶上的桿子。一開始對足球非常排斥，因為它相當消耗體力，但接觸手足球後發先它能滿足一些體力不足卻想體驗踢足球的人。剛開始接觸手足球時，由於不一定會有人有空陪你玩 ，因此嘗試設計人機對打並透過這樣的方式了解手足球如何在vrep以機器人的形式設計出來。</p>
 <p>相關文獻探討</p>
@@ -472,8 +472,8 @@ img {
 <p>專案執行內容</p>
 <p><span>透過Onshape繪製出手足球本體及人偶尺寸，利用Vrep編寫程式碼操控人偶，透過每週上傳Github進行進度協同，最後以CMSimfly網站上呈現出來</span></p>
 <p>專案結論</p>
-<p><a href="https://drive.google.com/file/d/1_Hk3IbIg1_vGYoDoedjd3eVrQ4iWQK_m/view">下載連結</a></p>
-<p>由於目前對於設計方面還不熟悉，因此設計過程大部分都是參考網站上再改變尺寸和程式碼，基礎部分還需多多加強，而球到最後會停止不動，這部分用斜面來改善。</p>
+<p>下載連結: <a href="https://drive.google.com/file/d/1_Hk3IbIg1_vGYoDoedjd3eVrQ4iWQK_m/view">人機對人機</a> 、 <a href="https://drive.google.com/file/d/1eaj6ecl3lIpankWGjdBZQgur_Uf5SOrK/view">人對人機</a> 、<a href="https://drive.google.com/file/d/10O3gXgdBlt4v4Mzeh6rxT1oc7lA7H9fS/view">人對人</a></p>
+<p>由於目前對於設計方面還不熟悉，因此設計過程大部分都是參考網站上再改變尺寸和程式碼，基礎部分還需多多加強，在對打時，球的路徑並不是很順暢，還有擊球時距離遠近也無法控制，這部分還需要學習並了解。</p>
 <p>人機對人機</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="280" src="https://www.youtube.com/embed/J5nIZNrk1mI" width="500"></iframe></p>
 <p>人對人機</p>
