--- a/content/專案口頭簡報.html
+++ b/content/專案口頭簡報.html
@@ -192,6 +192,7 @@ img {
 <p><a href="https://youtu.be/58hZPcfdCI8">40623227 張耀元結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=IwRi95KKyrg">40623238 許筌翔結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=jUDcZmLp38A&amp;feature=youtu.bea">40623210 翁嘉宏結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=aYgmS1R16Xk&amp;feature=youtu.be">40623226 鄭清銓結案口頭簡報</a></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
