--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -612,7 +612,8 @@
 <h4>手足球零件格式說明</h4>
 <p>手足球零件格式說明</p>
 <h4>零件 BOM</h4>
-<p>手足球零組件材料表 (含零組件下載連結)</p>
+<p>手足球零件表 (40623207)</p>
+<p><strong><img alt="" height="299" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_19-13-21.png" width="500"/></strong></p>
 <h4>零件尺寸圖</h4>
 <p><a href="https://cad.onshape.com/documents/53c22b4da867c8142bb12aa1/w/31b08ccdf22dccf0dbfd4551/e/1e17a238d46da990d0c7e221">手足球檯</a> (40623207)</p>
 <p><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-09-53.png" width="800"/></p>
@@ -636,7 +637,10 @@
 <p><a href="https://cad.onshape.com/documents/2f3210be73168a0196e02e77/w/d33060d6b2abe3e26897a9f7/e/d41b63a6d82e52aa96abcf08">球桿+足球員+彈簧</a> <span>(40623207)</span></p>
 <p><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-15-43.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/2f3210be73168a0196e02e77/w/d33060d6b2abe3e26897a9f7/e/97c6eed8f618d680331e1d10">送球機構</a> <span>(40623207)</span></p>
-<h4><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-18-18.png" width="800"/><br/><br/>3D 零組件爆炸圖</h4>
+<h4><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-18-18.png" width="800"/></h4>
+<p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/b29bb186efb20fe6f6d8389e">組合圖</a></p>
+<p><strong><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_17-33-24.png" width="800"/></strong></p>
+<h4>3D 零組件爆炸圖</h4>
 <p><a href="https://cad.onshape.com/documents/2f3210be73168a0196e02e77/w/d33060d6b2abe3e26897a9f7/e/0a30216732f3cfd171a17706">爆炸圖</a> (40623207)<br/><br/><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-53-36.png" width="800"/></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
@@ -1571,6 +1575,7 @@ end
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
 <p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/reveal/index.html#/">Group Reveal</a></p>
+<p><a href="https://youtu.be/53OS-JK7xDU">40623203 蔡宜芳結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=xIZ2bRLvOQc">40623206 邱妍蓁結案口頭簡報</a></p>
 <p><a href="https://youtu.be/k_-C0r0zLyg">40623212 魏有泉結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=lZbo9ncpHJE">40623221 蔡和勳結案口頭簡報</a></p>
@@ -1589,16 +1594,12 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
-<p></p>
-<p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/#/" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
-<p><span><a href="https://www.youtube.com/watch?v=FbAMh2A8I2A&amp;t=1s">40423160 許育誠結案口頭簡報</a></span></p>
-<p></p>
 <p><a href="https://www.youtube.com/watch?v=evHq1EF35Yk&amp;feature=youtu.be">40623231周駿麟專案口頭報告</a></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/#/" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
 <p><span><a href="https://www.youtube.com/watch?v=FbAMh2A8I2A&amp;t=1s">40423160 許育誠結案口頭簡報</a></span></p>
 <p><span><a href="https://www.youtube.com/watch?v=_or3LP04mLc" target="_blank">40623241 郭祐齊結案口頭簡報</a></span></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/index.html#/" target="_blank">40623237 黃博隆結案口頭簡報</a></span></p>
-<p></p>
+<p><a href="https://www.youtube.com/watch?v=gCPO-jOPdpg">40623207 呂沛蓉結案口頭簡報</a></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
