--- a/content/專案口頭簡報.html
+++ b/content/專案口頭簡報.html
@@ -165,7 +165,8 @@ img {
 <p><a href="https://www.youtube.com/watch?v=Wfbf2eF_vcE">40623240 何冠均結案口頭簡報</a></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
-<p><a href="https://studio.youtube.com/video/bW3vqJRxjdw/edit">40623202 吳姍蓉結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=bW3vqJRxjdw">40623202 吳姍蓉結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=8s1lC7I44ag">40623209 李芳瑜結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=ilWPZ30MLdI">40623236 黃子峰結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=lo0uui6fS6k">40623215 吳柏毅結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=thRieR1paRw">40623220 蔡崇廷結案口頭簡報</a></p>
