--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -189,7 +189,7 @@
 <td>執行規劃</td>
 </tr>
 <tr>
-<td><a href="https://github.com/40623209">40623209 李芳瑜</a></td>
+<td><a href="https://github.com/40623209/cd2019-40623209_site">40623209 李芳瑜</a></td>
 <td>執行規劃</td>
 </tr>
 <tr>
@@ -303,6 +303,10 @@
 </tbody>
 </table>
 <p>專案執行過程規劃</p>
+<p>在專案執行過程規劃中，我們首先是做好分工，再來是各自為自己的工作蒐集資料，並開始著手準備，其在執行的過程中遇到困難都是互相討論解決，最後將大家的想法整合後才完成每一組的模擬。做好小組專案後，開始將自己製作的內容放入個人網站以及簡報，完成從期中考後到期末考週的工作與任務。</p>
+<ul>
+<li><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E5%9C%96%E7%89%871.png">執行過程規劃甘特圖</a></li>
+</ul>
 <p>專案執行內容</p>
 <p><span>延續上半學期的手足球機台，從一開始執行規劃、送球機構的初步設計並使用Onshape繪圖，到最後能用v-rep寫程式做模擬，期間發生了許多問題及困難，例如:送球機構無法順利將球送到指定位置，因為送球機構更改球台的設計導致球員無法順利踢到足球......等(</span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/content/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88%E8%88%87%E6%A8%A1%E6%93%AC.html">相關連結</a><span>)，都是經過一在地更改才完成了現在的送球機構；在寫程式時，程式碼的定義出現了問題，導致無法順利模擬，但最後也順利解決，得到現在的成果。而這次較特別的是全班一起維護的</span><a href="https://github.com/40623202/cd2019b">期末倉儲</a><span>，本專案的協同工作也是一大重點，透過Github倉儲，讓成員可以同時提交工作，當然，過程中也是遇到很多麻煩，第一次全班一起維護一個倉儲，但經過幾次嘗試之後，也順利的提交pull request，讓期末倉儲得以順利更新。</span></p>
 <p>專案結論</p>
@@ -1571,6 +1575,7 @@ end
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
 <p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/reveal/index.html#/">Group Reveal</a></p>
+<p><a href="https://youtu.be/53OS-JK7xDU">40623203 蔡宜芳結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=xIZ2bRLvOQc">40623206 邱妍蓁結案口頭簡報</a></p>
 <p><a href="https://youtu.be/k_-C0r0zLyg">40623212 魏有泉結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=lZbo9ncpHJE">40623221 蔡和勳結案口頭簡報</a></p>
@@ -1579,7 +1584,8 @@ end
 <p><a href="https://www.youtube.com/watch?v=Wfbf2eF_vcE">40623240 何冠均結案口頭簡報</a></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
-<p><a href="https://studio.youtube.com/video/bW3vqJRxjdw/edit">40623202 吳姍蓉結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=bW3vqJRxjdw">40623202 吳姍蓉結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=8s1lC7I44ag">40623209 李芳瑜結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=ilWPZ30MLdI">40623236 黃子峰結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=lo0uui6fS6k">40623215 吳柏毅結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=thRieR1paRw">40623220 蔡崇廷結案口頭簡報</a></p>
