--- a/content/手足球系統模擬.html
+++ b/content/手足球系統模擬.html
@@ -291,6 +291,7 @@ img {
 <p>專案結論</p>
 <hr/>
 <h4><strong>BG2</strong></h4>
+<p>(40623202,40623209)</p>
 <p>專案成果摘要</p>
 <p>本次專案成果其分為三種:<a href="https://www.youtube.com/watch?time_continue=53&amp;v=aAG0wYawJ-I">人v.s人</a><span> </span>/<span> </span><a href="https://www.youtube.com/watch?time_continue=178&amp;v=MxwbTm1Q78Q">人v.s電腦</a><span> </span>/<span> </span><a href="https://www.youtube.com/watch?time_continue=75&amp;v=Uv_SfE0ZHog">電腦v.s電腦</a></p>
 <p>其成果是三種都有做出來，其中三種的差異主要是在程式定義上的問題，人v.s人是參考老師的版本下去做更改，在做人v.s電腦與電腦v.s電腦的過程中，需先將電腦的部分做出來，之後再與人的程式做個整合與優化的動作，其實可以一次寫完整個程式，但由於非資訊類科系，故在程式上土法煉鋼，將每一部份完成後再進行統合，雖花費時間較多，但也成功做出成果。</p>
@@ -324,7 +325,7 @@ img {
 <td>執行規劃</td>
 </tr>
 <tr>
-<td><a href="https://github.com/40623209">40623209 李芳瑜</a></td>
+<td><a href="https://github.com/40623209/cd2019-40623209_site">40623209 李芳瑜</a></td>
 <td>執行規劃</td>
 </tr>
 <tr>
@@ -438,6 +439,10 @@ img {
 </tbody>
 </table>
 <p>專案執行過程規劃</p>
+<p>在專案執行過程規劃中，我們首先是做好分工，再來是各自為自己的工作蒐集資料，並開始著手準備，其在執行的過程中遇到困難都是互相討論解決，最後將大家的想法整合後才完成每一組的模擬。做好小組專案後，開始將自己製作的內容放入個人網站以及簡報，完成從期中考後到期末考週的工作與任務。</p>
+<ul>
+<li><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/images/%E5%9C%96%E7%89%871.png">執行過程規劃甘特圖</a></li>
+</ul>
 <p>專案執行內容</p>
 <p><span>延續上半學期的手足球機台，從一開始執行規劃、送球機構的初步設計並使用Onshape繪圖，到最後能用v-rep寫程式做模擬，期間發生了許多問題及困難，例如:送球機構無法順利將球送到指定位置，因為送球機構更改球台的設計導致球員無法順利踢到足球......等(</span><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g2/content/%E9%80%81%E7%90%83%E6%A9%9F%E6%A7%8B%E8%A8%AD%E8%A8%88%E8%88%87%E6%A8%A1%E6%93%AC.html">相關連結</a><span>)，都是經過一在地更改才完成了現在的送球機構；在寫程式時，程式碼的定義出現了問題，導致無法順利模擬，但最後也順利解決，得到現在的成果。而這次較特別的是全班一起維護的</span><a href="https://github.com/40623202/cd2019b">期末倉儲</a><span>，本專案的協同工作也是一大重點，透過Github倉儲，讓成員可以同時提交工作，當然，過程中也是遇到很多麻煩，第一次全班一起維護一個倉儲，但經過幾次嘗試之後，也順利的提交pull request，讓期末倉儲得以順利更新。</span></p>
 <p>專案結論</p>
