--- a/config/content.htm
+++ b/config/content.htm
@@ -484,6 +484,7 @@
 <p>Onshape 零組件連結</p>
 <hr/>
 <h4><strong>BG3</strong></h4>
+<p><strong>edit:40423207</strong></p>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
 <p><img caption="false" height="150" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320701.PNG?raw=true" width="179"/> <img caption="false" height="150" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320702.PNG?raw=true" width="170"/></p>
 <p><span>桿子長度設定為73+762+308=1143，太短會滑落，太長會對玩家造成干擾。</span></p>
@@ -507,7 +508,6 @@
 <p><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/40e39c3ff2f78f7d8f4a7703">Base</a></p>
 <p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/0e3d6cf103458a0b429660c3">Throwing mechanism assembly</a><span><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/f412ca36103c51131b2bf475"><br/></a></span></p>
 <p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">Assembly</a></p>
-<p>edit:40423207</p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
@@ -559,8 +559,7 @@
 <p>Onshape 零組件連結</p>
 <p><a href="https://cad.onshape.com/documents/beea80ab157b5c6fce1314ef/w/48391349dbaefae52b3ad62d/e/0c9ee64798e9da17fc76db8b">手足球球場</a>(40623204)</p>
 <p><a href="https://cad.onshape.com/documents/42c36a84d62950168ebca0f3/w/f1702970d1df65d422c8473c/e/bd76f28373fbad738b5cb1ae">手足球員</a><span>(40623204)</span></p>
-<p><span><a href="https://cad.onshape.com/documents/ce9a467c873433002afbebbe/w/990ac62b0487b86db707dfda/e/3b1e99e137582926f26a4ce6">桿子</a>(40623204)</span></p>
-<h2>細部設計與 BOM</h2>
+<p><span><a href="https://cad.onshape.com/documents/ce9a467c873433002afbebbe/w/990ac62b0487b86db707dfda/e/3b1e99e137582926f26a4ce6">桿子</a>(40623204)</span></p><h2>細部設計與 BOM</h2>
 <h4><strong>BG1</strong></h4>
 <h4>手足球零件格式說明</h4>
 <p>手足球零件格式說明</p>
@@ -1491,7 +1490,6 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
-<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
 <p><span>手足球系統模擬-人</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">對人(40423160)</yt-formatted-string></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/I19GK0fYO_E" width="560"></iframe></p>
 <p><span>手足球系統模擬-人</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">對電腦<span>(40423160)</span></yt-formatted-string></p>
@@ -1500,9 +1498,7 @@ end
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qP5MVSiju8U" width="560"></iframe></p>
 <p><span>手足球系統模擬-人對人(40623237)</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/oxf7Ok9Unbs" width="560"></iframe></span></p>
-<p>=======</p>
 <p><a href="https://www.youtube.com/watch?v=oxf7Ok9Unbs" target="_blank">手足球人與人模擬(40623237)</a></p>
-<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; scrum-1/master</p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
@@ -1594,8 +1590,9 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
+<p><a href="https://www.youtube.com/watch?v=RT_pfoYzu6E&amp;feature=youtu.be">40423207朱修林專案口頭報告</a></p>
 <p><a href="https://www.youtube.com/watch?v=evHq1EF35Yk&amp;feature=youtu.be">40623231周駿麟專案口頭報告</a></p>
-<p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/#/" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
+<p><span><a href="https://www.youtube.com/watch?v=cb4zrz2aPU4" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
 <p><span><a href="https://www.youtube.com/watch?v=FbAMh2A8I2A&amp;t=1s">40423160 許育誠結案口頭簡報</a></span></p>
 <p><span><a href="https://www.youtube.com/watch?v=_or3LP04mLc" target="_blank">40623241 郭祐齊結案口頭簡報</a></span></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/index.html#/" target="_blank">40623237 黃博隆結案口頭簡報</a></span></p>
