--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -638,7 +638,7 @@
 <p><img alt="" height="567" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-15-43.png" width="800"/></p>
 <p><a href="https://cad.onshape.com/documents/2f3210be73168a0196e02e77/w/d33060d6b2abe3e26897a9f7/e/97c6eed8f618d680331e1d10">送球機構</a> <span>(40623207)</span></p>
 <h4><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-18-18.png" width="800"/></h4>
-<p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/b29bb186efb20fe6f6d8389e">組合圖</a></p>
+<p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/b29bb186efb20fe6f6d8389e">組合圖</a> (40623207)</p>
 <p><strong><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_17-33-24.png" width="800"/></strong></p>
 <h4>3D 零組件爆炸圖</h4>
 <p><a href="https://cad.onshape.com/documents/2f3210be73168a0196e02e77/w/d33060d6b2abe3e26897a9f7/e/0a30216732f3cfd171a17706">爆炸圖</a> (40623207)<br/><br/><img alt="" height="566" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/images/p37_21-53-36.png" width="800"/></p>
@@ -1491,7 +1491,6 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
-<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
 <p><span>手足球系統模擬-人</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">對人(40423160)</yt-formatted-string></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/I19GK0fYO_E" width="560"></iframe></p>
 <p><span>手足球系統模擬-人</span><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">對電腦<span>(40423160)</span></yt-formatted-string></p>
@@ -1500,9 +1499,7 @@ end
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qP5MVSiju8U" width="560"></iframe></p>
 <p><span>手足球系統模擬-人對人(40623237)</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/oxf7Ok9Unbs" width="560"></iframe></span></p>
-<p>=======</p>
 <p><a href="https://www.youtube.com/watch?v=oxf7Ok9Unbs" target="_blank">手足球人與人模擬(40623237)</a></p>
-<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; scrum-1/master</p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
@@ -1594,8 +1591,9 @@ end
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
+<p><a href="https://www.youtube.com/watch?v=RT_pfoYzu6E&amp;feature=youtu.be">40423207朱修林專案口頭報告</a></p>
 <p><a href="https://www.youtube.com/watch?v=evHq1EF35Yk&amp;feature=youtu.be">40623231周駿麟專案口頭報告</a></p>
-<p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/#/" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
+<p><span><a href="https://www.youtube.com/watch?v=cb4zrz2aPU4" target="_blank">40623237黃博隆專案口頭簡報</a></span></p>
 <p><span><a href="https://www.youtube.com/watch?v=FbAMh2A8I2A&amp;t=1s">40423160 許育誠結案口頭簡報</a></span></p>
 <p><span><a href="https://www.youtube.com/watch?v=_or3LP04mLc" target="_blank">40623241 郭祐齊結案口頭簡報</a></span></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623237/reveal/index.html#/" target="_blank">40623237 黃博隆結案口頭簡報</a></span></p>
