--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -156,6 +156,7 @@
 <p>專案結論</p>
 <hr/>
 <h4><strong>BG2</strong></h4>
+<p>(40623202,40623209)</p>
 <p>專案成果摘要</p>
 <p>本次專案成果其分為三種:<a href="https://www.youtube.com/watch?time_continue=53&amp;v=aAG0wYawJ-I">人v.s人</a><span> </span>/<span> </span><a href="https://www.youtube.com/watch?time_continue=178&amp;v=MxwbTm1Q78Q">人v.s電腦</a><span> </span>/<span> </span><a href="https://www.youtube.com/watch?time_continue=75&amp;v=Uv_SfE0ZHog">電腦v.s電腦</a></p>
 <p>其成果是三種都有做出來，其中三種的差異主要是在程式定義上的問題，人v.s人是參考老師的版本下去做更改，在做人v.s電腦與電腦v.s電腦的過程中，需先將電腦的部分做出來，之後再與人的程式做個整合與優化的動作，其實可以一次寫完整個程式，但由於非資訊類科系，故在程式上土法煉鋼，將每一部份完成後再進行統合，雖花費時間較多，但也成功做出成果。</p>
@@ -488,6 +489,7 @@
 <p>Onshape 零組件連結</p>
 <hr/>
 <h4><strong>BG3</strong></h4>
+<p><strong>edit:40423207</strong></p>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
 <p><img caption="false" height="150" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320701.PNG?raw=true" width="179"/> <img caption="false" height="150" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320702.PNG?raw=true" width="170"/></p>
 <p><span>桿子長度設定為73+762+308=1143，太短會滑落，太長會對玩家造成干擾。</span></p>
@@ -511,7 +513,6 @@
 <p><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/40e39c3ff2f78f7d8f4a7703">Base</a></p>
 <p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/0e3d6cf103458a0b429660c3">Throwing mechanism assembly</a><span><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/f412ca36103c51131b2bf475"><br/></a></span></p>
 <p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">Assembly</a></p>
-<p>edit:40423207</p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
@@ -563,8 +564,7 @@
 <p>Onshape 零組件連結</p>
 <p><a href="https://cad.onshape.com/documents/beea80ab157b5c6fce1314ef/w/48391349dbaefae52b3ad62d/e/0c9ee64798e9da17fc76db8b">手足球球場</a>(40623204)</p>
 <p><a href="https://cad.onshape.com/documents/42c36a84d62950168ebca0f3/w/f1702970d1df65d422c8473c/e/bd76f28373fbad738b5cb1ae">手足球員</a><span>(40623204)</span></p>
-<p><span><a href="https://cad.onshape.com/documents/ce9a467c873433002afbebbe/w/990ac62b0487b86db707dfda/e/3b1e99e137582926f26a4ce6">桿子</a>(40623204)</span></p>
-<h2>細部設計與 BOM</h2>
+<p><span><a href="https://cad.onshape.com/documents/ce9a467c873433002afbebbe/w/990ac62b0487b86db707dfda/e/3b1e99e137582926f26a4ce6">桿子</a>(40623204)</span></p><h2>細部設計與 BOM</h2>
 <h4><strong>BG1</strong></h4>
 <h4>手足球零件格式說明</h4>
 <p>手足球零件格式說明</p>
