--- a/config/content.htm
+++ b/config/content.htm
@@ -39,7 +39,7 @@
 <tr style="height: 141px;">
 <td style="text-align: center; width: 207px; height: 141px;">
 <p>40623203</p>
-<p>蔡宜芳</p>
+<p><a href="https://github.com/40623203/40623203_cd2019b">蔡宜芳</a></p>
 </td>
 <td style="text-align: center; width: 320.2px; height: 141px;">
 <p>執行規劃</p>
@@ -1579,6 +1579,7 @@ end
 <p><a href="https://youtu.be/53OS-JK7xDU">40623203 蔡宜芳結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=xIZ2bRLvOQc">40623206 邱妍蓁結案口頭簡報</a></p>
 <p><a href="https://youtu.be/k_-C0r0zLyg">40623212 魏有泉結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=gVEvF08sAaI">40623216 楊士平結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=lZbo9ncpHJE">40623221 蔡和勳結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=29aceP-3OrM">40623222 蔡博淮結案口頭簡報</a></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623233/reveal/index.html#/">40623233 謝宗宏結案口頭簡報</a></span></p>
