--- a/content/專案口頭簡報.html
+++ b/content/專案口頭簡報.html
@@ -159,6 +159,7 @@ img {
 <p><a href="https://youtu.be/53OS-JK7xDU">40623203 蔡宜芳結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=xIZ2bRLvOQc">40623206 邱妍蓁結案口頭簡報</a></p>
 <p><a href="https://youtu.be/k_-C0r0zLyg">40623212 魏有泉結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=gVEvF08sAaI">40623216 楊士平結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=lZbo9ncpHJE">40623221 蔡和勳結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=29aceP-3OrM">40623222 蔡博淮結案口頭簡報</a></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623233/reveal/index.html#/">40623233 謝宗宏結案口頭簡報</a></span></p>
