--- a/config/content.htm
+++ b/config/content.htm
@@ -1591,12 +1591,15 @@ end
 <p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/reveal/index.html#/">Group Reveal</a></p>
 <p><a href="https://youtu.be/53OS-JK7xDU">40623203 蔡宜芳結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=xIZ2bRLvOQc">40623206 邱妍蓁結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=_n43Tl6zJ7k">40623211 王得榮結案口頭簡報</a></p>
 <p><a href="https://youtu.be/k_-C0r0zLyg">40623212 魏有泉結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=gVEvF08sAaI">40623216 楊士平結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=lZbo9ncpHJE">40623221 蔡和勳結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=29aceP-3OrM">40623222 蔡博淮結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=UtK6io5Z03E">40623228 陳永錩結案口頭簡報</a></p>
 <p><span><a href="https://mdecadp2018.github.io/site-40623233/reveal/index.html#/">40623233 謝宗宏結案口頭簡報</a></span></p>
 <p><a href="https://www.youtube.com/watch?v=Wfbf2eF_vcE">40623240 何冠均結案口頭簡報</a></p>
+<p><a href="https://www.youtube.com/watch?v=393hnpxXBKg">40623245 練峪愷結案口頭簡報</a></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p><a href="https://www.youtube.com/watch?v=bW3vqJRxjdw">40623202 吳姍蓉結案口頭簡報</a></p>
@@ -1641,8 +1644,7 @@ end
 <p><a href="https://youtu.be/qdDvOBMB6Jc">40623232 余建杰結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=rrXvw2TMdZ4">40623242 高宇辰結案口頭簡報</a></p>
 <p><a href="https://www.youtube.com/watch?v=-Ix7WbmB5Jw">40623244 林俊鎧結案口頭簡報</a></p>
-<p><a href="https://www.youtube.com/watch?v=UJweGtyuj4M">40623248 廖柏誠結案口頭簡報</a></p>
-<h2>專案報告書</h2>
+<p><a href="https://www.youtube.com/watch?v=UJweGtyuj4M">40623248 廖柏誠結案口頭簡報</a></p><h2>專案報告書</h2>
 <h4><strong>BG1</strong></h4>
 <p>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</p>
 <hr/>
